# llm-sql-chat-workshop

./: .env.sample  .gitignore  LICENSE  README.md  pyproject.toml
app/: app.py
app/usecases/: multi_sql.py  multi_sql_prompts.py  prompts.py
data/: .gitignore  ingest_csv.py
notebooks/: 0.0.1-han-chain-demo.ipynb  0.0.2-han-chain-routing-failed.ipynb  0.0.3-han-agents.ipynb
scripts/: download-sample.sh
